{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 42,
  "lineage": "1167f5c6-f591-ccab-9f0c-3e208a5f9f7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0081c55264b4f42a1",
            "arn": "arn:aws:ec2:eu-west-3:548144471450:instance/i-029910d0672f049bd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029910d0672f049bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00d83da07438e9c22",
            "private_dns": "ip-10-0-1-132.eu-west-3.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-15-236-38-43.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.38.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d0b77144c2795cad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c7d6e66bb01de08e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06bb2847a43ec41d6"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.groupe",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b2900238ed7d2ed4",
            "owner_id": "548144471450",
            "tags": {
              "name": "main-gw"
            },
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-071df8b8a15f70179",
            "owner_id": "548144471450",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2900238ed7d2ed4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f038b3b5cd31d1db",
            "route_table_id": "rtb-071df8b8a15f70179",
            "subnet_id": "subnet-0c7d6e66bb01de08e"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb715164421ac97d",
            "route_table_id": "rtb-071df8b8a15f70179",
            "subnet_id": "subnet-0ae4971f6c35ce5a9"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "groupe",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:security-group/sg-06bb2847a43ec41d6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bb2847a43ec41d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "548144471450",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:subnet/subnet-086f6966424d5c01e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-086f6966424d5c01e",
            "map_public_ip_on_launch": false,
            "owner_id": "548144471450",
            "tags": {
              "name": "main-private-3"
            },
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:subnet/subnet-02696fb3d19e56d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02696fb3d19e56d02",
            "map_public_ip_on_launch": false,
            "owner_id": "548144471450",
            "tags": {
              "name": "main-private-4"
            },
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:subnet/subnet-0c7d6e66bb01de08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c7d6e66bb01de08e",
            "map_public_ip_on_launch": true,
            "owner_id": "548144471450",
            "tags": {
              "name": "main-public-1"
            },
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:subnet/subnet-0ae4971f6c35ce5a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ae4971f6c35ce5a9",
            "map_public_ip_on_launch": true,
            "owner_id": "548144471450",
            "tags": {
              "name": "main-public-2"
            },
            "vpc_id": "vpc-044b33607e65ad853"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:548144471450:vpc/vpc-044b33607e65ad853",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c396477bb187b0e3",
            "default_route_table_id": "rtb-0c4dbb03c67b913a0",
            "default_security_group_id": "sg-0633d678249908613",
            "dhcp_options_id": "dopt-149e7b7c",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-044b33607e65ad853",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c4dbb03c67b913a0",
            "owner_id": "548144471450",
            "tags": {
              "name": "main"
            }
          }
        }
      ]
    }
  ]
}